# AD3

./: CMakeLists.txt
ad3/: CMakeLists.txt
jni/: .gitignore  CMakeLists.txt  build.gradle  pom.xml
jni/src/main/cpp/: BinaryVariable.cpp  Factor.cpp  FactorGraph.cpp  MultiVariable.cpp  Utils.cpp  Utils.h  edu_cmu_cs_ark_ad3_AD3Jni.h
jni/src/main/cpp/include/: edu_cmu_cs_ark_ad3_AD3Jni.h
jni/src/main/java/edu/cmu/cs/ark/ad3/: AD3CObj.java  AD3Jni.java  BinaryVariable.java  Factor.java  FactorGraph.java  MAPResult.java  MultiVariable.java
jni/src/test/java/edu/cmu/cs/ark/ad3/: BinaryVariableTest.java  MultiVariableTest.java
